--- a/Contoso.Apps.SportsLeague/Web.config
+++ b/Contoso.Apps.SportsLeague/Web.config
@@ -25,6 +25,7 @@
     <customErrors mode="Off" />
     <httpRuntime targetFramework="4.5" />
     <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.ApplicationInsightsHttpModule, Microsoft.ApplicationInsights.Extensibility.Web" />
     </httpModules>
   </system.web>
   <runtime>
@@ -88,6 +89,8 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Extensibility.Web.ApplicationInsightsHttpModule, Microsoft.ApplicationInsights.Extensibility.Web" preCondition="managedHandler" />
     </modules>
   </system.webServer>
 </configuration>
