Update admin site

--- a/Contoso.Apps.SportsLeague.Admin/Contoso.Apps.SportsLeague.Admin.csproj
+++ b/Contoso.Apps.SportsLeague.Admin/Contoso.Apps.SportsLeague.Admin.csproj
@@ -25,6 +25,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -181,6 +182,9 @@
     <Content Include="fonts\fontawesome-webfonte0a5.ttf" />
     <Content Include="fonts\fontawesome-webfonte0a5.woff" />
     <Content Include="fonts\fontawesome-webfonte0a5.woff2" />
+    <None Include="Properties\PublishProfiles\briar-contososportsadmin %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\briar-contososportsadmin %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\briar-contososportsadmin %284%29.pubxml" />
     <None Include="Properties\PublishProfiles\briar-contososportsadmin.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
