--- a/Contoso.Apps.SportsLeague/Contoso.Apps.SportsLeague.Web.csproj
+++ b/Contoso.Apps.SportsLeague/Contoso.Apps.SportsLeague.Web.csproj
@@ -295,9 +295,6 @@
     <Content Include="fonts\slick.woff" />
     <Content Include="Images\right_arrow.jpg" />
     <Content Include="ApplicationInsights.config" />
-    <None Include="Properties\PublishProfiles\briar-contososports %282%29.pubxml" />
-    <None Include="Properties\PublishProfiles\briar-contososports %283%29.pubxml" />
-    <None Include="Properties\PublishProfiles\briar-contososports.pubxml" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -342,6 +339,7 @@
   <ItemGroup>
     <Folder Include="Content\" />
     <Folder Include="Models\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
